app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

nav.navbar-washos .navbar-nav a {
    text-transform: uppercase;
    color: #fff;
    font-weight: 300;
    font-size: 14px;
}

.navbar {
    min-height: 50px;
    margin-bottom: 20px;
}

html { background: transparent }

body {background-color: #F2F2F2 !important;}

.regular-box {
    padding-top: 20px;
    padding-bottom: 20px;
    background-color: white;
    margin-top: 20px;
    margin-bottom: 20px;
    border-radius: 5px;
}

.title-box {
    border-bottom: 1px solid #f2f2f2;
    margin-bottom: 20px;
}

